kotlin-ide/idea/testData/multiplatform/duplicateActualsExplicit/top/top.kt
package foo

expect class <!AMBIGUOUS_ACTUALS, LINE_MARKER("descr='Has actuals in common'")!>A<!>